...
            android:background="@color/colorWhite"
            android:src="@drawable/ic_more_horiz_black_24dp" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/ivScreenshot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside" />
</LinearLayout>
